arpeggia-website/src/components/styles.css
/* Navbar */

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");

p {
  margin: 0;
}

.flex-col-hstart-vstart {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.flex-row-vcenter {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.flex-hcenter {
  justify-content: center;
}

.nav-bar {
  width: 1409px;
  height: 160.67px;
}

.group-764 {
  height: 100%;
}

.arpeggia-_logo-_transparent-011 {
  width: 340px;
  margin-right: 50px;
  height: 100%;
}

.txt-777 {
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(17, 0, 85, 1);
  text-align: center;
  width: 241px;
  height: 60px;
  word-wrap: break-word;
  margin-right: 50px;
}

.txt-476 {
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(17, 0, 85, 1);
  text-align: center;
  word-wrap: break-word;
  margin-right: 50px;
}

.txt-387 {
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(17, 0, 85, 1);
  text-align: center;
  word-wrap: break-word;
}

/* Mainbanner */

@import url("https://fonts.googleapis.com/css2?family=League Spartan:wght@700&display=swap");

p {
  margin: 0;
}

.flex-col-hstart-vstart {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.main-banner {
  position: relative;
  width: 1512px;
  height: 835px;
}

.group-941 {
  position: absolute;
  top: 163px;
  none: 0px;
  /* padding: 353px 397px 89px 62px; */
  box-sizing: border-box;
  background-color: rgba(171, 228, 255, 1);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  height: 400px;
  width: 100%;
}

.txt-688 {
  top: 190px;
  position: absolute;
  left: 20px;
  font-size: 86px;
  font-family: League Spartan, sans-serif;
  font-weight: 700;
  color: #110055;
  width: 1051px;
  height: 113px;
  word-wrap: break-word;
  mix-blend-mode: hard-light;
}

.orchestra-pana-1 {
  position: absolute;
  top: 4%;
  bottom: 25.86%;
  left: 57.25%;
  right: 4.1%;
  width: 495px;
  height: 274.5px;
}
/* Nltext */

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open Sans:wght@700&display=swap");

p {
  margin: 0;
}

.flex-col-hstart-vstart {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.flex-hcenter {
  justify-content: center;
}

.nl-text {
  position: ABSOLUTE;
  bottom: 80px;
  width: 100%;
  height: 292px;
}

.group-392 {
  position: absolute;
  padding: 49px 0px 175px 48px;
  box-sizing: border-box;
  background-color: rgba(17, 0, 85, 1);
  height: 370px;
  width: 100%;
}

.txt-3310 {
  position: absolute;
    left: 20px;
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  text-align: center;
  word-wrap: break-word;
}

.txt-737 {
  position: absolute;
  top: 46.58%;
  bottom: 0%;
  left: 20px;
  right: 51.46%;
  font-size: 24px;
  font-family: Open Sans, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  width: 677px;
  height: 157px;
  word-wrap: break-word;
}
/* Signupnewsletter */

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");

p {
  margin: 0;
}

.flex-col-hstart-vstart {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.flex-row-vcenter {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.flex-hcenter {
  justify-content: center;
}

.flex-row-vend {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

.sign-up-newsletter {
  position: relative;
  padding: 33px 130px 36px 841px;
  box-sizing: border-box;
  width: 1507px;
  height: 292px;
}

.group-1108 {
  position: relative;
  height: 100%;
}

.group-262 {
  position: absolute;
  top: 94px;
  right: 400px;
  none: 0px;
  width: 183px;
  height: -moz-fit-content;
  height: fit-content;
}

.check-1 {
  background-color: rgba(255, 255, 255, 1);
  border: 4px solid rgba(0, 0, 0, 1);
  box-sizing: border-box;
  width: 19.93px;
  height: 20px;
  margin-right: 35px;
}

.txt-912 {
  font-size: 28px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  text-align: center;
  width: 128px;
  height: 24px;
  word-wrap: break-word;
}

.group-441 {
  position: absolute;
  top: 47px;
  right: 415px;
  none: 0px;
  width: 167px;
  height: fit-content;
}

.check-2 {
  background-color: rgba(255, 255, 255, 1);
  border: 4px solid rgba(0, 0, 0, 1);
  box-sizing: border-box;
  width: 19.93px;
  height: 20px;
  margin-right: 34px;
}

.txt-914 {
  font-size: 28px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  text-align: center;
  width: 113px;
  height: 24px;
  word-wrap: break-word;
}

.group-4411 {
  position: absolute;
  top: 135px;
  right: 415px;
  none: 0px;
  width: 167px;
  height: 27px;
}

.check-2 {
  background-color: rgba(255, 255, 255, 1);
  border: 4px solid rgba(0, 0, 0, 1);
  box-sizing: border-box;
  width: 19.93px;
  height: 20px;
  margin-right: 34px;
}

.txt-914 {
  font-size: 28px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  text-align: left;
  width: 113px;
  height: 24px;
  word-wrap: break-word;
}

#options {
  position: absolute;
  padding-right: 90%;
}
#iAmA {
  left: 935px;
  position: absolute;
  width: 200px;
  top: 45px;
}

/* Emailbar */

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");

p {
  margin: 0;
}

.flex-col-hstart-vstart {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.flex-hcenter {
  justify-content: center;
}

.email-bar {
  padding: 20px 0px 0px 0px;
  box-sizing: border-box;
  border-top: 1px solid rgb(255, 255, 255);
  width: 450px;
  height: 71px;
  bottom: -270px;
  right: 350px;
  position: absolute;
}

.group-371 {
  padding: 7px 326px 2px 10px;
  box-sizing: border-box;
  background-color: rgba(255, 255, 255, 1);
  border: 3px solid rgba(17, 0, 85, 1);
  width: 100%;
  height: 100%;
}

.txt-2108 {
  font-size: 28px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(17, 0, 85, 1);
  text-align: center;
  width: 192px;
  word-wrap: break-word;
}

